--- a/src/App.css
+++ b/src/App.css
@@ -52,17 +52,27 @@
 
 .code {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-wrap: wrap;
+    margin-bottom: 40px;
 }
 
 .code-block {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-wrap: wrap;
-    padding: 20px;
-    border-radius: 20px;
+    padding: 10px;
+    border-radius: 15px;
     background-color: cornflowerblue;
+    margin: 30px;
+}
+
+.box-code {
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    background: #ffffff;
+    margin: 20px;
 }
 
 .box {
@@ -70,7 +80,6 @@
     height: 150px;
     border-radius: 10px;
     background: #ffffff;
-    margin: 20px;
 }
 
 .box p {
@@ -83,6 +92,15 @@
     position: relative;
     top: 45%;
 }
+
+.big-box {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    background: #ffffff;
+    margin: 20px;
+}
+
 
 .f {
     background: #ffb3b3;
