--- a/src/css/Editor.css
+++ b/src/css/Editor.css
@@ -14,6 +14,7 @@
 .helper {
     height: auto;
     width: auto;
+    max-width: 1000px;
     padding: 20px;
     border-radius: 20px;
     background-color: #ffffff;
